# AI-introduction-MCPServer-homework

./: README.md  config.yaml  pyproject.toml  train_classifier.py
modules/YA_Common/utils/: report_generator.py  video_classifier.py
prompts/: bilibili_prompts.py
resources/: bilibili_resources.py
tests/: test_api.py
tools/: bilibili_tools.py
